<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:stretchColumns="3">

            <EditText
                android:id="@+id/et_meeting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autofillHints="Title"
                android:background="@drawable/edittext_border"
                android:gravity="center_vertical"
                android:hint="@string/title_hint"
                android:inputType="text"
                android:maxLength="50"
                android:minHeight="@dimen/editText_size"
                android:padding="@dimen/text_padding"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/etv_iv_room_color"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:contentDescription="@string/room_color_description"
                    app:srcCompat="@drawable/circle_black_24dp" />

                <Spinner
                    android:id="@+id/spn_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:background="@drawable/spinner_border"
                    android:dropDownWidth="wrap_content"
                    android:popupElevation="3dp"
                    android:prompt="@string/rooms_prompt"
                    android:spinnerMode="dropdown"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"
                    tools:ignore="PrivateResource" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_event_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:minWidth="50dp"
                    android:minHeight="@dimen/textView_size"
                    android:text="@string/date"
                    android:textColor="#2C2B2B"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_clickable_date"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:minWidth="100dp"
                    android:padding="@dimen/text_padding"
                    android:text="@string/date_example"
                    android:textColor="#2C2B2B"
                    android:textSize="@dimen/text_size_normal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:minWidth="50dp"
                    android:minHeight="@dimen/textView_size"
                    android:text="@string/hour"
                    android:textColor="#2C2B2B"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_clickable_start_hour"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:gravity="center_vertical"
                        android:padding="@dimen/text_padding"
                        android:text="@string/hour_example"
                        android:textColor="#2C2B2B"
                        android:textSize="@dimen/text_size_normal" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_trending_flat_black_24dp" />

                    <TextView
                        android:id="@+id/tv_clickable_end_hour"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_border"
                        android:gravity="center_vertical"
                        android:padding="@dimen/text_padding"
                        android:text="@string/hour_example"
                        android:textColor="#2C2B2B"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:lines="1"
                    android:text="@string/leader"
                    android:textColor="#2C2B2B"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/actv_leader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="3"
                    android:background="@drawable/edittext_border"
                    android:gravity="center_vertical"
                    android:hint="@string/no_leader_hint"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/editText_size"
                    android:padding="@dimen/text_padding"
                    android:textSize="@dimen/text_size_normal" />

            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/participants"
                android:textColor="#2C2B2B"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <MultiAutoCompleteTextView
                android:id="@+id/mactv_Participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_border"
                android:gravity="start"
                android:hint="@string/add_participants_hint"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/editText_size"
                android:padding="@dimen/text_padding"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/subject"
                android:textColor="#2C2B2B"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?attr/actionBarSize"
                android:autofillHints="Description text"
                android:background="@drawable/edittext_border"
                android:gravity="start"
                android:hint="@string/add_description_hint"
                android:inputType="none"
                android:minHeight="150dp"
                android:padding="@dimen/text_padding"
                android:textColor="#2C2B2B"
                android:textSize="@dimen/text_size_normal" />

        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
